# SUPL-3GPP-LPP-client

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  CONTROL.md  INPUT.md  LICENSE.txt  README.md  UPGRADE_FROM_V3.md  build-with-gcc4.8.sh  linux-armv7-s3lc  parse_spartn.py
asn.1/: AUTHORS  CMakeLists.txt  README
asn.1/helper/: CMakeLists.txt  bit_string.cpp
asn.1/lpp_generated/: A-GNSS-Error.c  A-GNSS-Error.h  A-GNSS-ProvideAssistanceData.c  A-GNSS-ProvideCapabilities.h  A-GNSS-ProvideLocationInformation.c  A-GNSS-RequestAssistanceData.c  A-GNSS-RequestLocationInformation.h  ARFCN-ValueEUTRA-r14.h  ARFCN-ValueUTRA.c  AUX-ReferenceStationID-Element-r15.c  AUX-ReferenceStationID-Element-r15.h  AUX-ReferenceStationList-r15.c  AUX-ReferenceStationList-r15.h  Abort-r9-IEs.c  Abort-r9-IEs.h  Abort.h  AccessTypes.h  Acknowledgement.c  Acknowledgement.h  AdditionalInformation.h  AdditionalPath-r14.c  AdditionalPathList-r14.h  AlmanacECEF-SBAS-AlmanacSet.h  AlmanacKeplerianSet.c  AlmanacMidiAlmanacSet.c  AlmanacMidiAlmanacSet.h  AlmanacNAV-KeplerianSet.h  AntennaReferencePointUnc-r15.h  AreaID-CellList-r17.c  ArrayOfGridPoints-r18.c  ArrayOfGridPoints-r18.h  AssistanceDataSupportList.h  Aux-ARP-Unc-r15.c  AuxiliaryStationElement-r15.c  AuxiliaryStationElement-r15.h  AuxiliaryStationList-r15.h  BDS-ClockModel-r12.c  BDS-ClockModel-r12.h  BDS-DifferentialCorrectionsReq-r12.h  BDS-DifferentialCorrectionsSupport-r12.h  (+635 more)
asn.1/skeleton/: BMPString.c  BMPString.h  BMPString_xer.c  ISO646String.h  Makefile  Makefile.am  Makefile.in  NativeReal_rfill.c  NativeReal_uper.c  REAL.h  REAL_jer.c  REAL_xer.c  RELATIVE-OID_jer.c  RELATIVE-OID_xer.c  T61String.c  TeletexString.h  UTCTime.c  UTCTime_rfill.c  UniversalString.h  VideotexString.c  constr_SET.c  constr_SET.h  constr_SET_ber.c  constr_SET_print.c  constr_SET_rfill.c  constr_SET_xer.c  file-dependencies
asn.1/src/: LPP-PDU-Definitions.asn  LPP.asn  SUPL-AUTH-REQ.asn  SUPL-AUTH-RESP.asn  SUPL-END.asn  SUPL-INIT.asn  SUPL-TRIGGERED-RESPONSE.asn  SUPL-TRIGGERED-STOP.asn  SUPL.asn  ULP-Version-2-parameter-extensions.asn  Ver2-ULP-Components.asn
asn.1/supl_generated/: ARFCN-NR.h  AltitudeInfo.c  AreaIdList.c  BasicProtectionParams.c  BatchRepCap.c  BatchRepCap.h  BatchRepConditions.c  BatchRepConditions.h  BatchRepType.c  BatchRepType.h  CDMAAreaId.h  CPICH-Ec-N0.h  CauseCode.c  CdmaCellInformation.c  CdmaCellInformation.h  CellGlobalIdNR.c  CellIdentityNR.c  CellIdentityNR.h  CellMeasuredResultsList.c  CellMeasuredResultsList.h  ChipRate.c  ChipRate.h  CircularArea.c  CircularArea.h  Coordinate.c  DGANSS-Sig-Id-Req.h  EllipticalArea.h  EncodingType.c  EventTriggerCapabilities.c  ExtendedEphCheck.h  FrequencyInfoFDD.c  FrequencyInfoFDD.h  FrequencyInfoTDD.c  GANSSPositionMethod.c  GANSSPositionMethod.h  GANSSPositionMethods.h  GANSSPositioningMethodTypes.c  GANSSSignals.c  GANSSextEphTime.c  GSMAreaId.c  (+161 more)
dependency/: CMakeLists.txt
dependency/client-io/: CMakeLists.txt  chunked_log.cpp  input.cpp  io.cpp  output.cpp  parse.cpp  registry.cpp  stage.cpp  stream.cpp  tag_registry.cpp  tbin_input.cpp
dependency/coordinates/: CMakeLists.txt
dependency/core/: CMakeLists.txt  error.cpp
dependency/datatrace/: CMakeLists.txt  datatrace.cpp
dependency/ephemeris/: CMakeLists.txt  bds.cpp  ephemeris.cpp  gal.cpp  glo.cpp  gps.cpp  qzs.cpp
dependency/format/: CMakeLists.txt
dependency/generator/: CMakeLists.txt
dependency/gnss/: CMakeLists.txt  satellite_id.cpp  signal_id.cpp
dependency/interface/: README.md  file.cpp  file_descriptor.cpp  file_descriptor.hpp  i2c.cpp  i2c.hpp  reconnectable_socket.cpp  serial.hpp  stdin.cpp  stdout.cpp  stdout.hpp  tcp.hpp  udp.cpp  udp.hpp  unix_socket.cpp
dependency/io/: CMakeLists.txt  adapters.cpp  buffer.cpp  file.cpp  input.cpp  io.cpp  output.cpp  registry.cpp  serial.cpp  stdin.cpp  stdout.cpp  stream.cpp  tcp.cpp  udp.cpp  write_buffer.cpp
dependency/loglet/: .loglet.cpp.swp  CMakeLists.txt  loglet.cpp
dependency/lpp/: CMakeLists.txt  abort.cpp  client.cpp  location_information_delivery.cpp  location_information_delivery.hpp  lpp.cpp  lpp.hpp  message.cpp  provide_capabilities.cpp  provide_location_information.cpp  request_assistance_data.cpp  session.cpp  single_session.cpp  single_session.hpp  transaction.cpp
dependency/maths/: CMakeLists.txt  float3.cpp  mat3.cpp
dependency/modem/: CMakeLists.txt  modem.cpp
dependency/msgpack/: CMakeLists.txt  msgpack.cpp  vector.cpp
dependency/receiver/: CMakeLists.txt
dependency/scheduler/: CMakeLists.txt  epoll_constants.hpp  file_descriptor.cpp  periodic.cpp  scheduler.cpp  socket.cpp  stream.cpp  timeout.cpp
dependency/streamline/: CMakeLists.txt  streamline.cpp
dependency/supl/: CMakeLists.txt  decode.cpp  decode.hpp  encode.cpp  encode.hpp  message.cpp  print.cpp  session.cpp  supl.cpp  supl.hpp  tcp_client.cpp  tcp_client.hpp  tls.cpp  tls_openssl.cpp
dependency/time/: CMakeLists.txt  bdt.cpp  glo.cpp  gps.cpp  gst.cpp  tai.cpp  timestamp.cpp  utc.cpp
examples/: CMakeLists.txt
examples/client/: CMakeLists.txt  README.md  assistance_data.cpp  client.hpp  config.cpp  config.hpp  input_format.hpp  io.cpp  io.hpp  main.cpp  output_format.hpp  program_io.hpp  raw_message.hpp  stage.hpp  tag_registry.cpp  tag_registry.hpp
examples/crs/: CMakeLists.txt  main.cpp
examples/ctrl_switch/: CMakeLists.txt  README.md  main.cpp  options.cpp  options.hpp
examples/ctrl_toggle/: CMakeLists.txt  main.cpp
interface/: CMakeLists.txt  README.md  file.cpp  file.hpp  file_descriptor.cpp  file_descriptor.hpp  i2c.cpp  i2c.hpp  reconnectable_socket.cpp  reconnectable_socket.hpp  serial.cpp  serial.hpp  socket.cpp  socket.hpp  stdin.cpp  stdin.hpp  stdout.cpp  stdout.hpp  target.h  tcp.cpp  tcp.hpp  udp.cpp  udp.hpp  unix_socket.cpp  unix_socket.hpp
src/: CMakeLists.txt  location_information.h  main.cpp  osr_example.h  ssr_example.h
tests/: CMakeLists.txt  generate_rtcm_golden.cpp  generate_tokoro_snapshot.cpp  reproduce_fuzz.sh  test_helpers.hpp
(+2072 files in other folders)
