add_subdirectory("core")
add_subdirectory("coordinates")
add_subdirectory("gnss")
add_subdirectory("format")
add_subdirectory("io")
add_subdirectory("loglet")
add_subdirectory("lpp")
add_subdirectory("supl")
add_subdirectory("modem")
add_subdirectory("scheduler")
add_subdirectory("streamline")
add_subdirectory("generator")
add_subdirectory("time")
add_subdirectory("maths")
add_subdirectory("ephemeris")
add_subdirectory("msgpack")

if(DATA_TRACING)
    add_subdirectory("datatrace")
endif()
