
add_subdirectory("ntrip")
add_subdirectory("ctrl_toggle")
add_subdirectory("modem_ctrl")
add_subdirectory("client")
add_subdirectory("lpp2spartn")
if(BUILD_EXAMPLE_TRANSFORM)
    add_subdirectory("transform")
endif()
if(INCLUDE_GENERATOR_IDOKEIDO AND INCLUDE_FORMAT_RINEX)
    add_subdirectory("ppp")
endif()
