if(BUILD_EXAMPLE_NTRIP)
    add_subdirectory("ntrip")
endif()
if(BUILD_EXAMPLE_CTRL_TOGGLE)
    add_subdirectory("ctrl_toggle")
endif()
if(BUILD_EXAMPLE_MODEM_CTRL)
    add_subdirectory("modem_ctrl")
endif()
if(BUILD_EXAMPLE_CLIENT)
    add_subdirectory("client")
endif()
if(BUILD_EXAMPLE_LPP2SPARTN)
    add_subdirectory("lpp2spartn")
endif()
if(BUILD_EXAMPLE_TRANSFORM)
    add_subdirectory("transform")
endif()
if(INCLUDE_GENERATOR_IDOKEIDO AND INCLUDE_FORMAT_RINEX)
    if(BUILD_EXAMPLE_SPP)
        add_subdirectory("spp")
    endif()
    if(BUILD_EXAMPLE_PPP)
        add_subdirectory("ppp")
    endif()
endif()
