option(BUILD_EXAMPLE_CLIENT      "Build client example"       ON)
option(BUILD_EXAMPLE_NTRIP       "Build ntrip example"        ON)
option(BUILD_EXAMPLE_MODEM_CTRL  "Build modem_ctrl example"   ON)
option(BUILD_EXAMPLE_CTRL_TOGGLE "Build ctrl_toggle example"  ON)
option(BUILD_EXAMPLE_LPP2SPARTN  "Build lpp2spartn example"   ON)
option(BUILD_EXAMPLE_TRANSFORM   "Build transform example"    OFF)

if(BUILD_EXAMPLE_CLIENT)
    add_subdirectory("client")
endif()
if(BUILD_EXAMPLE_NTRIP)
    add_subdirectory("ntrip")
endif()
if(BUILD_EXAMPLE_MODEM_CTRL)
    add_subdirectory("modem_ctrl")
endif()
if(BUILD_EXAMPLE_CTRL_TOGGLE)
    add_subdirectory("ctrl_toggle")
endif()
if(BUILD_EXAMPLE_LPP2SPARTN)
    add_subdirectory("lpp2spartn")
endif()
if(BUILD_EXAMPLE_TRANSFORM)
    add_subdirectory("transform")
endif()
